fix(cors): hardcode Vercel URL as default origin + allow *.vercel.app pattern + fix allowedHeaders for credentials